# edgar_explorer

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  cloudbuild.yaml  entrypoint.sh  env  gcp_helper.py  logger_config.json  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: python_build.yaml
edgar_explorer/: admin.py  apps.py  bq_adapter.py  data_importer.py  models.py  urls.py  views.py
edgar_explorer/management/commands/: initapp.py
edgar_explorer/migrations/: 0001_initial.py  0002_filing_chunks_filing_texts.py  0002_filing_relevant_text.py  0002_filing_unique_filing_constraint.py  0003_filing_batch_id.py  0003_filing_num_citations.py  0004_filing_num_responses.py  0005_remove_filing_num_citations_and_more.py  0006_filing_model.py  0007_filing_cost.py
edgar_explorer/templates/account/: login.html
edgar_explorer/templates/common/: base.html
edgar_explorer/templates/extraction/: entity_modal.html  filing_detail.html  filings_list.html  load_new.html
edgar_explorer/templates/trustee/: filings_list.html  trustee_modal.html
edgarui/: adapters.py  asgi.py  notes.md  settings.py  urls.py  wsgi.py
scripts/: setup_workload_identity.sh
templates/: base.html  index.html
tests/: conftest.py  settings.py  test_appconfig.py  test_data_loading.py  test_listing_page.py  test_models.py  test_trustee_page.py
tests/data/: seed.sql
trustee/: admin.py  apps.py  bq_adapter.py  models.py  urls.py  views.py
trustee/management/commands/: initapp.py
trustee/migrations/: 0001_initial.py
trustee/templates/: base.html  filings_list.html
trustee/templates/account/: login.html
(+1 files in other folders)
