[project]
name = "edgar_explorer"
version = "1.1.0"
description = "App that let user example processing result of using LLM to extract trustee information from 485BPOS filings"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "google-cloud-logging>=3.11.3",
    "django>=5.1.4",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.2",
    "django-tables2>=2.7.5",
    "django-allauth>=65.3.1",
    "python-decouple>=3.8",
    "google-cloud-storage>=2.19.0",
    "python-dotenv>=1.0.1",
    "google-cloud-firestore>=2.20.2",
]
[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.0",
    "pre-commit >= 4.0.1",
    "ruff >= 0.8.2",
    "pyright >= 1.1.139",
    "pytest-django>=4.9.0",
    "beautifulsoup4>=4.12.3",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 90
indent-width = 4
exclude = [".git", "__pycache__", "venv", ".venv", "settings.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]


[tool.ruff.lint.per-file-ignores]
"migrations/*.py" = ["E501"] # Ignore line too long for auto-generated migration files
